--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,54 @@
   <meta charset="utf-8">
   <title>SportsFiesta</title>
   <base href="/">
+  <script type="text/javascript">
+    //    <![CDATA[
+    var head = document.getElementsByTagName('head')[0];
+    var xhrObj = new XMLHttpRequest();
+    var url = '/assets/config.js?' + Date.now();
+    xhrObj.open('GET', url, false);
+    xhrObj.send('');
+    var se = document.createElement('script');
+    se.type = "text/javascript";
+    se.text = xhrObj.responseText;
+    head.appendChild(se);
+    </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+    }
+
+    #myVideo {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
+
+    .content {
+      position: fixed;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      height: 100%;
+    }
+    </style>
 </head>
 <body>
-  <app-root></app-root>
+<video autoplay muted loop id="myVideo">
+  <source src="/assets/rain.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+  <app-root class="content"></app-root>
 </body>
 </html>
