--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     //    <![CDATA[
     var head = document.getElementsByTagName('head')[0];
     var xhrObj = new XMLHttpRequest();
-    var url = '/assets/config.js?' + Date.now();
+    var url = 'assets/config.js?' + Date.now();
     xhrObj.open('GET', url, false);
     xhrObj.send('');
     var se = document.createElement('script');
